# Precios-gasolineras

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  arbol.txt  docker-compose.yml  pyproject.toml  reorganizar_proyecto.sh  requirements.txt
app/: cli.py  db.py  main.py  models.py
app/core/: config.py
app/routers/: health.py  history.py  lists.py  ranking.py  search.py  stations.py
app/services/: api_client.py  etl.py  load.py  transform.py
app/sql/: schema.sql
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: lists.py  search.py
backend/app/services/: energia_client.py
backend/app/sql/: views.sql
backend/scripts/: run_etl.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Filters.tsx  ResultsTable.tsx
frontend/src/pages/: Home.tsx  StationDetail.tsx
