[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precio-gasolineras"
version = "0.1.0"
description = "ETL + API de precios de gasolineras en España"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "typer[all]>=0.12",
  "pandas>=2.2",
  "python-dateutil>=2.9",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM"]
ignore = []
exclude = ["venv",".venv","build","dist"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

# ⬇️ ESTA es la ÚNICA sección de descubrimiento de paquetes
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
